--- a/GEO 103.md
+++ b/GEO 103.md
@@ -1906,10 +1906,159 @@ Horses:
 	* **Endosymbiosis** is special case where one organism lives within another
 	* many internal organelles of eukaryotes (e.g., mitochondria) form from symbiotic prokaryotic organisms
 
+## Early Eukaryotes
+- Acritarchs
+	- oldest at 1.4 Gyr (common by late Proterozoic)
+	- cysts of eukaryotic planktonic algae
+![[Pasted image 20230325110309.png|250]]
+
+- microfossiles with vase-shaped skeletons
+	- found in late Proterozoic rocks in Grand Canyon
+	- considered cysts of some kind of algae
+
+## Origin of Multicelled Organisms
+- present during Proterozoic but unsure when they appeared
+- carbonaceous filaments possible multicelled algae in 2.1 Gyr Negaunee Iron Formation, Michigan
+	- ![[Pasted image 20230325110650.png]]
+- carbonaceous impression of filaments & spheres in 1.8 Gyr rocks in China
+	- ![[Pasted image 20230325110724.png]]
+- may originate as colonies of single celled where certain cells became specialized
+## Edicaran Fauna
+- absence of pre-Paleozoic fossils considered a problem
+	- Cambrian fossils complex but no record of development
+- **R.C Sprigg** discovered impressions of soft-bodied animals in Pound Quartzite, Ediacara Hills, South Australia
+	- impressions of algae
+	- several animals, no resemblance to any now existing animal
+- 3/4 present day phyla represented
+	- Cnidaria - jellyfish/sea pens
+	- Annelida - segmented worms
+	- Arthropoda - possible primitive members
+	- fossil *Spriggina* may be ancestor to trilobites
+	- possible primitive member of Phylum Echinodermata
+![[Pasted image 20230325111135.png|350]]
+
+## Is Ediacaran Fauna Distinct?
+- represent early gevolutionary group quite distinct from ancestry of modern invertebrates
+- fauna known from all continents except Antarctica
+- widespread btwn ~539 and ~670 Myr
+- actual fossils are rare
+	- scarcity not surprising because they all lacked durable skeletons (soft bodies)
+
+## Other Proterozoic Animals
+- very rare fossils older than Ediacaran are known
+	- jellyfish like impression 2000m below Ediacara Hills Pound Quartzite
+	- burrows
+- wormlike and algae fossils in 700/900 Myr rocks in China but these "fossils" are questioned
+- ![[Pasted image 20230325111602.png]]
+
+## Evolution of Skeletons
+- Proterozoic animals were soft-bodied
+	- some evidence that early development of skeletons was underway
+	- some Ediacaran animals may have had chitinous (organic polymer) carapace
+	- others appear to have areas of calcium carbonate
+- ***Kimberella*** in latest Proterozoic of Russia
+	- touch outer covering => similar to present day marine invertebrates
+	- possible slug-like creature
+	- **possible relationship to mollusks**
+- ![[Pasted image 20230325111738.png]]
+
+## Evolution of Skeletons
+- we have found in Proterozoic rocks:
+	- minute pieces of shell-like material
+	- small tooth like denticles and spicles from sponges
+- indicate several animals w/ skeletons or at least partial skeletons eixsted
+- most durable skeletons consisting of
+	- silica
+	- calcium carbonate
+	- chitin 
+	- **did not appear in abundance until beginning of the Phanerozoic Eon - 539 Myr**
+
+- Precambrian
+	- Archean
+	- Proterozoic
+- Paleozoic (~250 Myrs)
+	- Cambrian
+	- Ordovian
+	- Silurian
+	- Devonian
+	- Carboniferous
+		- Mississippian
+		- Pennsylvanian
+	- Permian
+- Mesozoic
+	- Triasic
+	- Jurassic
+	- Cretaceous
 
 
+# Chapter 10/11
 
-## Chapter 10/11
+## Paleozoic Earth History
+
+## Paleozoic History
+- mountain building along margins
+- global sea level changes related to plate tectonics / glaciation
+- **Pannotia** supercontinent (formed during Late Proterozoic)
+	- late Proterozoic, break apart
+	- 6 major continents @ beginning of Paleozoic
+	- NA (Laurentia)
+	- each continent => **craton** and one/more **mobile belts**, **sites of orogenic activity**
+- during transgressions, shallow epeiric seas were common feature on cratons 
+- shallow *epeiric seas* were common feature on cratons
+
+## Paleozoic NA
+![[Pasted image 20230325123308.png|350]]
+
+## Paleozoic Paleogeography
+- interpretations for particular geological age
+	- paleoclimatic data
+	- paleomagnetic data
+	- fossils
+	- sedimentology & stratigraphy
+	- tectonic data
+- Paleozoic less well known than for Mesozoic and Cenozoic due to lack of magnetic anomaly patterns - ocean floor subducted to form Pangea
+- Paleozoic paleogeogrpahy inferrered mainly from:
+	- structural relationships
+	- disitrbution of climate sensitive sediments such as
+		- red beds, evaporites, coal
+	- distribution of plants/animals
+
+![[Pasted image 20230325124126.png|450]]
+
+![[Pasted image 20230325124143.png|450]]
+
+## Early Paleozoic Global History
+- Early-Middle Cambrian
+	- 6 major continents dispersed at low latitudes
+	- open circulation among ocean basins
+	- polar regions mostly ice-free
+- Late Cambrian
+	- epeiric seas cover areas of **Laurentia, Baltica, Siberia, Kazakhstania, China**
+	- highlands present in **northeastern Gondwana, eastern Siberia and central Kazakhstania**
+- Ordovician & Silurian
+	- Gondwana moved **southward** during Ordovician
+	- crossed south pole during Late Ordovician (tillites in modern Sahara Desert)
+	- active margin developed on eastern margin of Laurentia
+	- formed **Taconic Orogeny in New England area**
+
+## Early Paleozoic Evolution of NA
+- NA cratony history:
+	- relatively stable interior
+	- mobile belts where mountain building occurred
+- **L. SLoss** divided NA sedimentary record into **6 cratonic sequences**
+	- large scale lithostratigraphic units representing majro transgressive-regressive cycles bounded by craton-wide unconformities
+- similar unconformity-bounded sequences identified outside NA
+	- sea-level changes controlled by tectonics & glaciation
+![[Pasted image 20230325125149.png|350]]
+
+## Sequence Stratigraphy
+- subdivision & correlation of cratonic sequences provides foundation for **Sequence Stratigraphy**
+	- basic unit of sequence stratigraphy is *sequence* - succession of rocks bounded by unconformities
+	- and equivalent conformable strata
+- sequence stratigraphy is important because
+	- permits subdivision of sediments into time
+
+
 ### Sauk Sequence
 - Late Proterozoic-Early Ordovician - first major transgression onto N.American craton
 - craton above sea level
@@ -2082,3 +2231,5 @@ Late Permian (~260 Myr)
 
 ### Devonian - Mississippian Period
 ![[Pasted image 20230324100915.png]]
+
+
