--- a/CSE 320.md
+++ b/CSE 320.md
@@ -191,7 +191,7 @@
             1. Global symbols: non-static functions and non-static vars
             2. External symbols: defined in other modules
             3. Local symbols: static functions and static vars
-            * Note: Do not confuse local symbols with local variables. Local variables are allocated in stack at runtime, and have nothing to do with linker. 
+            * **Note: Do not confuse local symbols with local variables.** Local variables are allocated in stack at runtime, and have nothing to do with linker. 
         * Symbol resolution
             * Symbols are strong or weak:
                 1. Strong: functions and initialized globals
@@ -202,12 +202,12 @@
                 * May cause undefined behavior over different compilers
                 * Fix: use `static` and explicit `extern` 
     2. Relocation
-        * Merge text and data segment
-        * Relative location -> absolute location
-        * Updates symbol table
+        * Merge text and data segment into single sections
+        * Relative location -> absolute location in .exe
+        * Updates symbol table to their new positions
             * Relocation entries are used to aid symbol resolving:  
             `a: R_X86_64_32 array`
-* Three kinds of object files
+* Three kinds of object files (Modules)
     1. Relocatable object file (.o file)
     2. Executable object file (a.out file)
     3. Shared object file (.so file or .dll file)
